tests/invalid/bytearray_unsupported_type/main.py
x: float = 3.14
y: bytearray = bytearray(x)
